fix(website): reduce eye bleed of benchmark tables
Per feedback from viewers, reduce the vibrance of the background color
of benchmark tables in dark mode.

--- a/website/public/benchmarks/benchmark.css
+++ b/website/public/benchmarks/benchmark.css
@@ -332,7 +332,7 @@ body.javascript .javascript-only {
 }
 @media (prefers-color-scheme: dark) {
   .benchmark-table tbody tr {
-    background-color: hsla(var(--hue), 70%, 30%);
+    background-color: hsla(var(--hue), 70%, 20%);
   }
 }
 
